1.19.3 port! Compiles and runs, needs more testing