@@ -17,52 +17,55 @@
 
 package me.desht.pneumaticcraft.datagen;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
 import me.desht.pneumaticcraft.common.block.PneumaticCraftEntityBlock;
 import me.desht.pneumaticcraft.common.core.ModBlocks;
-import me.desht.pneumaticcraft.common.loot.CustomDungeonLootProvider;
+import me.desht.pneumaticcraft.common.core.ModItems;
 import me.desht.pneumaticcraft.common.loot.LootFunc;
-import me.desht.pneumaticcraft.common.loot.MechanicVillagerChestLootProvider;
 import net.minecraft.data.DataGenerator;
-import net.minecraft.data.loot.BlockLoot;
+import net.minecraft.data.loot.BlockLootSubProvider;
 import net.minecraft.data.loot.LootTableProvider;
+import net.minecraft.data.loot.LootTableSubProvider;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.flag.FeatureFlags;
+import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
+import net.minecraft.world.level.ItemLike;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.SlabBlock;
 import net.minecraft.world.level.storage.loot.LootPool;
 import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.ValidationContext;
+import net.minecraft.world.level.storage.loot.entries.EmptyLootItem;
 import net.minecraft.world.level.storage.loot.entries.LootItem;
+import net.minecraft.world.level.storage.loot.entries.LootPoolEntryContainer;
+import net.minecraft.world.level.storage.loot.entries.LootPoolSingletonContainer;
 import net.minecraft.world.level.storage.loot.functions.CopyNameFunction;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
+import net.minecraft.world.level.storage.loot.functions.EnchantRandomlyFunction;
+import net.minecraft.world.level.storage.loot.functions.SetItemCountFunction;
+import net.minecraft.world.level.storage.loot.functions.SetNbtFunction;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraft.world.level.storage.loot.predicates.ExplosionCondition;
 import net.minecraft.world.level.storage.loot.providers.number.ConstantValue;
+import net.minecraft.world.level.storage.loot.providers.number.UniformGenerator;
 import net.minecraftforge.registries.ForgeRegistries;
 import net.minecraftforge.registries.RegistryObject;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.function.BiConsumer;
-import java.util.function.Consumer;
-import java.util.function.Supplier;
+
+import static me.desht.pneumaticcraft.api.PneumaticRegistry.RL;
 
 public class ModLootTablesProvider extends LootTableProvider {
 
     public ModLootTablesProvider(DataGenerator dataGeneratorIn) {
-        super(dataGeneratorIn);
-    }
-
-    @Override
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-        return ImmutableList.of(
-                Pair.of(BlockLootTablePNC::new, LootContextParamSets.BLOCK),
-                Pair.of(MechanicVillagerChestLootProvider::new, LootContextParamSets.CHEST),
-                Pair.of(CustomDungeonLootProvider::new, LootContextParamSets.CHEST)
-        );
+        super(dataGeneratorIn.getPackOutput(), Set.of(), List.of(
+                new LootTableProvider.SubProviderEntry(BlockLootTablePNC::new, LootContextParamSets.BLOCK),
+                new LootTableProvider.SubProviderEntry(MechanicVillagerChestLootProvider::new, LootContextParamSets.CHEST),
+                new LootTableProvider.SubProviderEntry(CustomDungeonLootProvider::new, LootContextParamSets.CHEST)
+        ));
     }
 
     @Override
@@ -70,15 +73,19 @@ public class ModLootTablesProvider extends LootTableProvider {
         // ...
     }
 
-    private static class BlockLootTablePNC extends BlockLoot {
+    private static class BlockLootTablePNC extends BlockLootSubProvider {
+        public BlockLootTablePNC() {
+            super(Set.of(), FeatureFlags.DEFAULT_FLAGS);
+        }
+
         @Override
-        protected void addTables() {
+        protected void generate() {
             for (RegistryObject<Block> ro: ModBlocks.BLOCKS.getEntries()) {
                 Block b = ro.get();
                 if (b instanceof PneumaticCraftEntityBlock && ForgeRegistries.ITEMS.containsKey(ro.getId())) {
                     addStandardSerializedDrop(b, ro.getId());
                 } else if (b instanceof SlabBlock) {
-                    add(b, BlockLoot::createSlabItemTable);
+                    add(b, this::createSlabItemTable);
                 } else if (b.asItem() != Items.AIR) {
                     dropSelf(b);
                 }
@@ -109,9 +116,107 @@ public class ModLootTablesProvider extends LootTableProvider {
 
     }
 
-    @Override
-    public String getName() {
-        return "PneumaticCraft Loot Tables";
+    public static class MechanicVillagerChestLootProvider implements LootTableSubProvider {
+        @Override
+        public void generate(BiConsumer<ResourceLocation, LootTable.Builder> consumer) {
+            LootPool.Builder lootPool = LootPool.lootPool();
+            lootPool.setRolls(ConstantValue.exactly(4))
+                    .add(createEntry(ModItems.COMPRESSED_IRON_INGOT.get(), 10, 4, 12))
+                    .add(createEntry(ModItems.AMADRON_TABLET.get(), 2, 1, 1))
+                    .add(createEntry(ModItems.AIR_CANISTER.get(), 10, 1, 5))
+                    .add(createEntry(ModItems.PNEUMATIC_CYLINDER.get(), 5, 2, 4))
+                    .add(createEntry(ModItems.LOGISTICS_CORE.get(), 8, 4, 8))
+                    .add(createEntry(ModItems.CAPACITOR.get(), 4, 4, 8))
+                    .add(createEntry(ModItems.TRANSISTOR.get(), 4, 4, 8))
+                    .add(createEntry(ModItems.TURBINE_ROTOR.get(), 5, 2, 4))
+                    .add(createEntry(ModBlocks.COMPRESSED_IRON_BLOCK.get(), 2, 1, 2))
+                    .add(createEntry(ModBlocks.VORTEX_TUBE.get(), 5, 1, 1))
+                    .add(createEntry(ModBlocks.PRESSURE_TUBE.get(), 10, 3, 8))
+                    .add(createEntry(ModBlocks.ADVANCED_PRESSURE_TUBE.get(), 4, 3, 8))
+                    .add(createEntry(ModBlocks.HEAT_PIPE.get(), 8, 3, 8))
+                    .add(createEntry(ModBlocks.APHORISM_TILE.get(), 5, 2, 3));
+
+            LootTable.Builder lootTable = LootTable.lootTable();
+            lootTable.withPool(lootPool);
+            consumer.accept(RL("chests/mechanic_house"), lootTable);
+        }
+
+        private LootPoolEntryContainer.Builder<?> createEntry(ItemLike item, int weight, int min, int max) {
+            return createEntry(new ItemStack(item), weight)
+                    .apply(SetItemCountFunction.setCount(UniformGenerator.between(min, max)));
+        }
+
+        private LootPoolSingletonContainer.Builder<?> createEntry(ItemStack item, int weight) {
+            LootPoolSingletonContainer.Builder<?> ret = LootItem.lootTableItem(item.getItem()).setWeight(weight);
+            if (item.hasTag())
+                ret.apply(SetNbtFunction.setTag(item.getOrCreateTag()));
+            return ret;
+        }
     }
 
+    private static class CustomDungeonLootProvider implements LootTableSubProvider {
+        @Override
+        public void generate(BiConsumer<ResourceLocation, LootTable.Builder> consumer) {
+            LootPool.Builder commonPool = LootPool.lootPool();
+            commonPool.setRolls(ConstantValue.exactly(3))
+                    .add(createEntry(ModItems.COMPRESSED_IRON_INGOT.get(), 10,1, 3))
+                    .add(createEntry(ModBlocks.COMPRESSED_STONE.get(), 10,5, 10))
+                    .add(createEntry(ModItems.LOGISTICS_CORE.get(), 3,1, 1))
+                    .add(createEntry(ModBlocks.PRESSURE_TUBE.get(), 3,8, 8))
+                    .add(EmptyLootItem.emptyItem().setWeight(20));
+            LootTable.Builder commonTable = LootTable.lootTable();
+            commonTable.withPool(commonPool);
+            consumer.accept(RL("custom/common_dungeon_loot"), commonTable);
+
+            LootPool.Builder uncommonPool = LootPool.lootPool();
+            uncommonPool.setRolls(ConstantValue.exactly(2))
+                    .add(createEntry(ModItems.VORTEX_CANNON.get(), 1,1, 1))
+                    .add(createEntry(ModItems.SPAWNER_AGITATOR.get(), 1,1, 1))
+                    .add(createEntry(ModItems.COMPRESSED_IRON_BOOTS.get(), 1,1, 1))
+                    .add(createEntry(ModItems.COMPRESSED_IRON_LEGGINGS.get(), 1,1, 1))
+                    .add(createEntry(ModItems.COMPRESSED_IRON_CHESTPLATE.get(), 1,1, 1))
+                    .add(createEntry(ModItems.COMPRESSED_IRON_HELMET.get(), 1,1, 1))
+                    .add(createEntry(ModItems.TRANSISTOR.get(), 1,1, 4))
+                    .add(createEntry(ModItems.CAPACITOR.get(), 1,1, 4))
+                    .add(createEntry(ModItems.PNEUMATIC_CYLINDER.get(), 1,2, 3))
+                    .add(EmptyLootItem.emptyItem().setWeight(10));
+            LootTable.Builder uncommonTable = LootTable.lootTable();
+            uncommonTable.withPool(uncommonPool);
+            consumer.accept(RL("custom/uncommon_dungeon_loot"), uncommonTable);
+
+            LootPool.Builder rarePool = LootPool.lootPool();
+            rarePool.setRolls(ConstantValue.exactly(1))
+                    .add(createEntry(ModItems.STOP_WORM.get(), 1,1, 1))
+                    .add(createEntry(ModItems.NUKE_VIRUS.get(), 1,1, 1))
+                    .add(createEntry(ModItems.GUN_AMMO_AP.get(), 1,1, 1))
+                    .add(ammo(ModItems.GUN_AMMO_FREEZING.get()))
+                    .add(ammo(ModItems.GUN_AMMO_WEIGHTED.get()))
+                    .add(ammo(ModItems.GUN_AMMO_INCENDIARY.get()))
+                    .add(ammo(ModItems.GUN_AMMO_EXPLOSIVE.get()))
+                    .add(createEntry(ModItems.PROGRAMMING_PUZZLE.get(), 1,4, 12))
+                    .add(createEntry(ModItems.MICROMISSILES.get(), 1,1, 1))
+                    .add(EmptyLootItem.emptyItem().setWeight(20));
+            LootTable.Builder rareTable = LootTable.lootTable();
+            rareTable.withPool(rarePool);
+            consumer.accept(RL("custom/rare_dungeon_loot"), rareTable);
+        }
+
+        private LootPoolEntryContainer.Builder<?> ammo(ItemLike item) {
+            return createEntry(new ItemStack(item), 1)
+                    .apply(SetItemCountFunction.setCount(ConstantValue.exactly(1)))
+                    .apply(EnchantRandomlyFunction.randomApplicableEnchantment());
+        }
+
+        private LootPoolEntryContainer.Builder<?> createEntry(ItemLike item, int weight, int min, int max) {
+            return createEntry(new ItemStack(item), weight)
+                    .apply(SetItemCountFunction.setCount(UniformGenerator.between(min, max)));
+        }
+
+        private LootPoolSingletonContainer.Builder<?> createEntry(ItemStack item, int weight) {
+            LootPoolSingletonContainer.Builder<?> ret = LootItem.lootTableItem(item.getItem()).setWeight(weight);
+            if (item.hasTag())
+                ret.apply(SetNbtFunction.setTag(item.getOrCreateTag()));
+            return ret;
+        }
+    }
 }
